# rust-applesauce

./: Cargo.toml  README.md
examples/: 01_subscribe.rs  02_live_feed.rs  03_multiple_filters.rs  04_concurrent_subs.rs
src/: lib.rs  relay.rs  socket.rs  types.rs
